[package]
name = "c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
argon2 = "0.5.0"
base64-simd = "0.8.0"
clap = { version = "4.3.0", features = ["derive"] }

[profile.release]
# See: https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
panic = "abort"